# prompt-bench

./: .env.example  .gitignore  CLAUDE.md  README.md  USAGE.md  evaluate_prompts.py  import_history.py  models.json  pyproject.toml  test_models.py
outputs/v1/: anthropic__claude-haiku-4-5-20251001-thinking.txt  anthropic__claude-opus-4-5-20251101.txt  anthropic__claude-opus-4-6.txt  anthropic__claude-sonnet-4-20250514.txt  anthropic__claude-sonnet-4-6.txt  deepseek__deepseek-v3.1.txt  deepseek__deepseek-v3.2-exp.txt  evaluations.json  google__gemini-3.1-pro-preview.txt  openai__gpt-5.1-2025-11-13.txt  openai__gpt-5.2-2025-12-11.txt  openai__gpt-5.4.txt
outputs/v2/: anthropic__claude-haiku-4-5-20251001-thinking.txt  anthropic__claude-opus-4-5-20251101.txt  anthropic__claude-opus-4-6.txt  anthropic__claude-sonnet-4-20250514.txt  anthropic__claude-sonnet-4-6.txt  deepseek__deepseek-v3.1.txt  deepseek__deepseek-v3.2-exp.txt  evaluations.json  google__gemini-3.1-pro-preview.txt  openai__gpt-5.1-2025-11-13.txt  openai__gpt-5.2-2025-12-11.txt  openai__gpt-5.4.txt
outputs/v3/: anthropic__claude-haiku-4-5-20251001-thinking.txt  anthropic__claude-opus-4-5-20251101.txt  anthropic__claude-opus-4-6.txt  anthropic__claude-sonnet-4-20250514.txt  deepseek__deepseek-v3.1.txt  deepseek__deepseek-v3.2-exp.txt  evaluations.json  google__gemini-3.1-pro-preview.txt  openai__gpt-5.1-2025-11-13.txt  openai__gpt-5.2-2025-12-11.txt
outputs/v4/: anthropic__claude-opus-4-5-20251101.txt  anthropic__claude-sonnet-4-20250514.txt  anthropic__claude-sonnet-4-6.txt  deepseek__deepseek-v3.1.txt  deepseek__deepseek-v3.2-exp.txt  evaluations.json  google__gemini-3.1-pro-preview.txt  openai__gpt-5.2-2025-12-11.txt
promptbench/: __init__.py  __main__.py
promptbench/cli/: __init__.py  main.py
prompts/: structures_library.md  template.md  titles_library.md  v1.md  v1_optimized.md  v2.md  v3.md  v4.md  v5.md  v5_base.md
tests/: test_ai_evaluator.py  test_cli.py  test_core.py  test_detectors.py  test_evaluators_integration.py  test_models_versions.py  test_optimizers.py  test_rule_evaluator.py  test_utils.py
(+26 files in other folders)
